force-app/main/default/objects/Pull_Request_Setting__c/Pull_Request_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Peer Review Setting</label>
</CustomObject>