force-app/main/default/objects/Pull_Request_Setting__c/fields/AddToDeploymentApprovalType__c.field-meta.xml
<CustomField>
    <fullName>AddToDeploymentApprovalType__c</fullName>
    <label>AddToDeploymentApprovalType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>