force-app/main/default/objects/Pull_Request_Setting__c/fields/DeploymentPercentageORNumberOfUsers__c.field-meta.xml
<CustomField>
    <fullName>DeploymentPercentageORNumberOfUsers__c</fullName>
    <label>DeploymentPercentageORNumberOfUsers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>