force-app/main/default/objects/Pull_Request_Setting__c/fields/PullRequestDeploymentSetting__c.field-meta.xml
<CustomField>
    <fullName>PullRequestDeploymentSetting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PeerReviewDeploymentSetting</label>
    <type>Checkbox</type>
</CustomField>